ingress-templates/example.com-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example.com-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-http
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-https
                port:
                  number: 443
